T192 - Partial work on edit page

--- a/assets/client/src/pages/internal/containers/common/inventory/allotments/main/template/allotments.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/allotments/main/template/allotments.html
@@ -12,6 +12,8 @@
 	<lazy-loading-table
 		[isCollapsed]="isEditing"
 		(onSelect)="selectAllotment($event)"
+		(onEdit)="editAllotment($event)"
+		(onAdd)="addAllotment()"
 		>
 	</lazy-loading-table>
 </div>
@@ -19,9 +21,14 @@
 	<allotment-overview 
 		*ngIf="selectedAllotmentVM && !isEditing" 
 		[allotmentVM]="selectedAllotmentVM"
-		
+		(onEdit)="editAllotment($event)"
 		>
 	</allotment-overview>
+	<allotment-edit-container
+		*ngIf="selectedAllotmentVM && isEditing" 
+		[allotmentVM]="selectedAllotmentVM"
+		(onExit)="showViewScreen()">
+	</allotment-edit-container>
 	
 	<div #overviewBottom>
 	</div>
