T192 - Partial Work (allotment availability edit)

--- a/assets/client/src/pages/internal/containers/common/inventory/allotments/pages/allotment-edit/container/template/allotment-edit-container.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/allotments/pages/allotment-edit/container/template/allotment-edit-container.html
@@ -6,7 +6,9 @@
 		<div class="row">
 			<allotment-open-interval-section [didSubmit]="didSubmit"></allotment-open-interval-section>	
 		</div>
-
+		<div class="row">
+			<allotment-availability-section [didSubmit]="didSubmit"></allotment-availability-section>
+		</div>
 
 		<div class="row">
 			<div class="col-xs-12 col-md-offset-6 col-md-3">
