--- a/assets/client/src/pages/internal/containers/common/inventory/allotments/pages/allotment-edit/sections/top-section/template/allotment-edit-top-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/allotments/pages/allotment-edit/sections/top-section/template/allotment-edit-top-section.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-sm-4 form-group">
+<div class="col-xs-12 col-sm-4 form-group th-list-group">
 	<label>{{ 'Customer' | translate }}*</label>
 	<table class="table table-striped form-group">
 		<tbody class="input-group" [ngClass]="{'form-warning': didSubmit&&!selectedCustomerDO}">
