--- a/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
@@ -45,12 +45,28 @@
 
                 <div class="row">
                     <div class="col-xs-12 col-md-12 form-group">
-                        <label class="control-label">{{ 'Beds' | translate }}</label>
+                        <label class="control-label">{{ 'Stationary Beds' | translate }}</label>
                     </div>
                     <div class="col-xs-12 col-md-12 form-group">
-                        <bed-selector [availableBedList]="allAvailableBeds" [selectedBedList]="roomVM.bedList" (selectedBedListChanged)="diChangeSelectedBedList($event)"></bed-selector>
+                        <bed-selector [availableBedList]="allAvailableStationaryBeds" [selectedBedList]="selectedStationaryBeds" [roomCategory]="roomVM.category"
+                            (selectedBedListChanged)="diChangeStationarySelectedBedList($event)"></bed-selector>
                     </div>
 
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 col-md-12 form-group">
+                        <label class="control-label">{{ 'Rollaway Beds' | translate }}</label>
+                    </div>
+                    <div class="col-xs-12 col-md-12 form-group">
+                        <bed-selector [availableBedList]="allAvailableRollawayBeds" [selectedBedList]="selectedRollawayBeds" [roomCategory]="roomVM.category"
+                            (selectedBedListChanged)="diChangeRollawaySelectedBedList($event)"></bed-selector>
+                    </div>
+                </div>
+
+                <div *ngIf="didSubmitForm && !atLeastAStationaryOrARollawayBedWasAdded" class="row">
+                    <div class="col-xs-12 col-md-12">
+                        <small class="text-warning"><i class="fa fa-info-circle"></i>{{ 'Add at least a stationary or a rollaway bed for the newly added category.' | translate }}</small>
+                    </div>
                 </div>
             </div>
 
