grouped stationary and rollaway beds selector on a single row in room edit screen

--- a/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/components/bed-selector/template/bed-selector.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/components/bed-selector/template/bed-selector.html
@@ -7,7 +7,7 @@
         <div *ngIf="!bedVM.accomodatesBabies" class="bed-slot-inner" [title]="bedVM.bed.name">
             <span class="bed-slot-icon unitpal-font">{{bedVM.template.iconUrl}}</span>
             <br/>
-            <small>{{bedVM.bed.name}}</small>
+            <small class="bed-slot-text">{{bedVM.bed.name}}</small>
             <br/> {{bedVM.capacity.maxAdults}}<span class="unitpal-font">:</span> {{bedVM.capacity.maxChildren}}<span class="unitpal-font">;</span>
         </div>
         
