--- a/assets/client/src/pages/internal/containers/common/inventory/modals/beds/template/beds-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/modals/beds/template/beds-modal.html
@@ -12,9 +12,9 @@
                     <div class="btn bed-slot unselected" (click)="bedSelectionVM.numberOfInstances=bedSelectionVM.numberOfInstances+1">
                         <div class="bed-slot-inner" [title]="bedSelectionVM.bedVM.bed.name">
                             <div class="bed-btn">
-                                <span class="unitpal-font">{{bedSelectionVM.bedVM.template.iconUrl}}</span>
+                                <span class="unitpal-font bed-slot-icon">{{bedSelectionVM.bedVM.template.iconUrl}}</span>
                             </div>
-                            <small>{{bedSelectionVM.bedVM.bed.name}}</small>
+                            <small class="bed-slot-text">{{bedSelectionVM.bedVM.bed.name}}</small>
                             <br/> {{bedSelectionVM.bedVM.capacity.maxAdults}}
                             <span class="unitpal-font">:</span> {{bedSelectionVM.bedVM.capacity.maxChildren}}<span class="unitpal-font">;</span>
                         </div>
