BedCapacity, RoomCapacity, RoomCategoryStats refactoring + updated tests
Summary:
Merge branch 'development' of https://gitlab.3angletech.com/UnitPalDK/UnitPal into development

Moved bed list attribute from room to room category + tests

Merge branch 'development' of https://gitlab.3angletech.com/UnitPalDK/UnitPal into development

updated client models for beds and rooms + beds edit component

bed edit refactoring

fixed capacity column display if maxAdults/Children=0

fixed capacity display in bed-overview

integrated the new model structures in rooms screen

integrated the new capacity data object in PricePerPersonDO

integrated room category changes in room edit screen

grouped stationary and rollaway beds selector on a single row in room edit screen

add bed bug fixing

Test Plan: [CR] Bed Issues

Reviewers: ionut.paraschiv

Subscribers: dragos.pricope, ionut.paraschiv

Differential Revision: https://phabricator.3angletech.com/D77

--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -568,9 +568,9 @@ lazy-loading-table {
     margin: 5px 0px;
 }
 
-/*.bed-btn > span {
+.bed-btn > span {
     font-size: 48px;
-}*/
+}
 
 .bed-icon-overview {
     font-size: 75px;
@@ -626,7 +626,7 @@ lazy-loading-table {
     color: #fc8433;
 }
 .bed-slot-icon {
-    font-size: 30px;
+    font-size: 30px !important;
 }
 .bed-slot-text {
     font-size: 12px;
