removed printable section directive as it has some error in combination with the scrollable directive

--- a/assets/client/src/pages/internal/containers/common/inventory/allotments/pages/allotment-edit/container/template/allotment-edit-container.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/allotments/pages/allotment-edit/container/template/allotment-edit-container.html
@@ -1,6 +1,6 @@
 <div class="edit-form-container" customScroll>
 	<div class="edit-form">
-		<span printableSection>
+		<span class="printable-section">
 			<div class="row">
 				<allotment-edit-top-section [didSubmit]="didSubmit"></allotment-edit-top-section>
 			</div>
