[T203] added modal-xlg modal

--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -703,6 +703,14 @@ lazy-loading-table {
     flex-grow: 1;
 } 
 
+.modal-xlg {
+    margin: 61px 30px 20px 30px;
+    height: calc(100% - 38px);
+    width: calc(100% - 60px);
+    min-height: 400px;
+    min-width: 300px;
+}
+
 .selectable-row {
     cursor: pointer;
 }
