--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/pages/tax-list/template/basic-info-tax-list.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/pages/tax-list/template/basic-info-tax-list.html
@@ -21,7 +21,7 @@
 			<td></td>
 			<td>
 				<center>
-					<a class="btn btn-xs" (click)="addNewTax()"><i class="fa fa-plus"></i> {{ 'Add' || translate }} </a>
+					<a class="btn btn-xs" (click)="addNewTax()"><i class="fa unitpal-font">'</i> {{ 'Add' || translate }} </a>
 				</center>
 			</td>
 			<td></td>
