--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/container/template/customer-register-edit-container.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/container/template/customer-register-edit-container.html
@@ -47,7 +47,7 @@
 							<tr>
 								<td>
 									<a class="btn btn-xs" (click)="openPriceProductSelectModal()">
-										<i class="fa fa-plus"></i> {{ 'Add' | translate }}
+										<i class="fa unitpal-font">'</i> {{ 'Add' | translate }}
 									</a>
 								</td>
 								<td></td>
