--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/add-on-products/template/price-product-edit-add-on-products-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/add-on-products/template/price-product-edit-add-on-products-section.html
@@ -13,7 +13,7 @@
 			</tr>
 			<tr>
 				<td  *ngIf="!readonly">
-					<a class="btn btn-xs" (click)="openAddOnProductSelectModal()"><i class="fa fa-plus"></i> {{ 'Add' | translate }} </a>
+					<a class="btn btn-xs" (click)="openAddOnProductSelectModal()"><i class="fa unitpal-font">'</i> {{ 'Add' | translate }} </a>
 				</td>
 				<td></td>
 			</tr>
