--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/taxes/template/price-product-edit-taxes-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/taxes/template/price-product-edit-taxes-section.html
@@ -25,7 +25,7 @@
 			<tr>
 				<td *ngIf="!readonly">
 					<a class="btn btn-xs" (click)="openOtherTaxSelectModal()">
-						<i class="fa fa-plus"></i> {{ 'Add' | translate }}
+						<i class="fa unitpal-font">'</i> {{ 'Add' | translate }}
 					</a>
 				</td>
 				<td>
