--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/navbar/template/settings-navbar.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/settings/subcomponents/navbar/template/settings-navbar.html
@@ -1,13 +1,12 @@
-<div class="scroll-view">
-	<div id="sidebar-menu" class="main_menu_side main_menu">
-		<div class="menu_section">
-			<ul class="nav side-menu">
-				<li *ngFor="let settingsPage of settingsPageList" [ngClass]="{'current-page': settingsPage.selected}">
-					<a (click)="changePage(settingsPage)"> 
-						{{settingsPage.pageName | translate}}<span class="pull-right unitpal-font">{{settingsPage.iconFontName}}</span>
-					</a>
-				</li>
-			</ul>
-		</div>
+<div class="main_menu_side" customScroll>
+	<div class="menu_section">
+		<ul class="nav side-menu">
+			<li *ngFor="let settingsPage of settingsPageList" [ngClass]="{'current-page': settingsPage.selected}">
+				<a (click)="changePage(settingsPage)"> 
+					<span class="side-menu-item">{{settingsPage.pageName | translate}}</span>
+					<span class="pull-right unitpal-font">{{settingsPage.iconFontName}}</span>
+				</a>
+			</li>
+		</ul>
 	</div>
 </div>
