--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraints-list/template/price-product-edit-constraints-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraints-list/template/price-product-edit-constraints-section.html
@@ -26,7 +26,7 @@
 			<tr>
 				<td *ngIf="!readonly">
 					<a class="btn btn-xs" (click)="openConstraintsModal()">
-						<i class="fa fa-plus"></i> {{ 'Add' | translate }}
+						<i class="fa unitpal-font">'</i> {{ 'Add' | translate }}
 					</a>
 				</td>
 				<td></td>
