--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/room-categories/template/price-product-edit-room-categories-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/room-categories/template/price-product-edit-room-categories-section.html
@@ -12,7 +12,7 @@
 			</tr>
 			<tr>
 				<td  *ngIf="!readonly">
-					<a class="btn btn-xs" (click)="openRoomCategorySelectModal()"><i class="fa fa-plus"></i> {{ 'Add' | translate }} </a>
+					<a class="btn btn-xs" (click)="openRoomCategorySelectModal()"><i class="fa unitpal-font">'</i>  {{ 'Add' | translate }} </a>
 				</td>
 				<td></td>
 			</tr>
