--- a/assets/client/src/pages/internal/containers/home/pages/utils/header/template/main-header.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/header/template/main-header.html
@@ -1,27 +1,41 @@
 <!-- logo area -->
 <div class="row">
 	<div class="col-xs-2 col-md-2 text-center">
-		<img src="/client/static-assets/images/unit_pal_logo.png" class="singup_logo center-block" alt="" />
+		<div class="home-header-logo">
+			<img src="/client/static-assets/images/unit_pal_logo.png" />
+			<p><strong>Unit</strong>Pal</p>
+		</div>
+
 	</div>
 	<div class="col-xs-10 col-md-10">
 		<!-- top navigation -->
 		<div class="row">
-			<div class="col-xs-10">
+			<div class="col-xs-9">
+				<div class="form-inline">
+					<div class="home-header-button" *ngFor="let headerPage of headerPageList" (click)="moveToPage(headerPage)" [ngClass]="{active: headerPage.selected}">
+						<div class="left-separator"></div>
+						<span class="unitpal-font">{{headerPage.pageFontName}}</span>
+						<p>{{ headerPage.pageName | translate }}</p>
+					</div>
+					<div class="home-header-name">
+						{{ hotelName }}
+					</div>
+				</div>
 			</div>
-			<div class="col-xs-2">
+			<div class="col-xs-3">
 				<ul class="nav navbar-nav navbar-right">
-					<li class="">
+					<li>
 						<a class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
 							<span class="fa fa-gear fa-2x"></span>
 						</a>
-						<ul class="dropdown-menu dropdown-usermenu animated fadeInDown pull-right">
+						<ul class="dropdown-menu animated fadeInDown pull-right">
 							<li>
 								<a [routerLink]="['/MainHomeComponent/SettingsContainerComponent']">
 									{{ 'Settings' | translate }}
 								</a>
 							</li>
 							<li>
-								<a (click)="logOut()">
+								<a href (click)="logOut()">
 									<i class="fa fa-sign-out pull-right"></i> {{ 'Log Out' | translate }}
 								</a>
 							</li>
